add maze solver

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,8 +4,34 @@
 @import "mixins";
 
 @import "parts/reset";
-@import "parts/buttons";
 //other parts here
 
 // latest
 @import "overrides";
+
+.row {
+  display: flex;
+}
+
+.cell {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #333;
+}
+
+.space {
+  background: #fff;
+}
+
+.wall {
+  background: #ddd;
+}
+
+.path {
+    background: #18ff18;
+}
+
+.start,
+.end {
+    background: #ff1818;
+}
