--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,29 +9,13 @@
 // latest
 @import "overrides";
 
-.row {
-  display: flex;
+.table {
+  // table styles
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.cell {
-  width: 40px;
-  height: 40px;
-  border: 1px solid #333;
-}
-
-.space {
-  background: #fff;
-}
-
-.wall {
-  background: #ddd;
-}
-
-.path {
-    background: #18ff18;
-}
-
-.start,
-.end {
-    background: #ff1818;
+.selected {
+    background-color: green;
 }
